changed api functionning and added get responses for basket and scores

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
     <!---->
     <div class="extension-modules">
         <!--détails du panier-->
-        <details class="basket-details">
+        <details class="basket-details" onclick='document.location.href="auchan.fr/checkout/cart/"'>
             <summary>Détails du panier</summary>
             <ul class="basket-details-list">
                 <li>
