--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./popup.css" />
+    <!-- <script src="./popup.js"></script> -->
+    <script src="./background.js" type="module"></script>
 </head>
 
 <body>
@@ -20,7 +22,7 @@
     <!---->
     <div class="extension-modules">
         <!--détails du panier-->
-        <details class="basket-details" onclick='document.location.href="auchan.fr/checkout/cart/"'>
+        <details class="basket-details">
             <summary>Détails du panier</summary>
             <ul class="basket-details-list">
                 <li>
@@ -58,7 +60,6 @@
         <p>Votre Ethic'score : XX points</p>
     </div>
     <!---->
-    <script src="./background.js" type="module"></script>
 </body>
 
 </html>
