create extension content with js

--- a/popup.html
+++ b/popup.html
@@ -22,10 +22,10 @@
     <!---->
     <div class="extension-modules">
         <!--détails du panier-->
-        <details class="basket-details">
+        <!--<details class="basket-details">
             <summary>Détails du panier</summary>
             <ul class="basket-details-list">
-                <li>
+                <li class="conteneur_details">
                     <details>
                         <summary>Produit 1</summary>
                         <p>Pilier 1 : 🔴</p>
@@ -33,32 +33,19 @@
                         <p>Pilier 3 : 🟡</p>
                     </details>
                 </li>
-                <li>
-                    <details>
-                        <summary>Produit 2</summary>
-                        <p>Pilier 1 : 🔴</p>
-                        <p>Pilier 2 : 🟢</p>
-                        <p>Pilier 3 : 🟡</p>
-                    </details>
-                </li>
-                <li>
-                    <details>
-                        <summary>Produit 3</summary>
-                    </details>
-                </li>
             </ul>
-        </details>
+        </details>-->
         <!--quêtes du jour-->
-        <details>
+        <!--<details>
             <summary>Quêtes du jour</summary>
             Lorem ipsum ...
         </details>
     </div>
-    <hr>
+    <hr>-->
     <!--score total-->
-    <div>
-        <p>Votre Ethic'score : XX points</p>
-    </div>
+    <!--<div>
+        <p>Votre Ethic'score : 0.00€</p>
+    </div>-->
     <!---->
 </body>
 
