changed style, and script logic

--- a/popup.html
+++ b/popup.html
@@ -22,31 +22,35 @@
     <!---->
     <div class="extension-modules">
         <!--détails du panier-->
-        <!--<details class="basket-details">
+        <details class="basket-details">
             <summary>Détails du panier</summary>
             <ul class="basket-details-list">
                 <li class="conteneur_details">
-                    <details>
-                        <summary>Produit 1</summary>
-                        <p>Pilier 1 : 🔴</p>
-                        <p>Pilier 2 : 🟢</p>
-                        <p>Pilier 3 : 🟡</p>
-                    </details>
+                    <!-- <summary>Produit 1</summary> -->
+                    <!-- <p>Pilier 1 : 🔴</p> -->
+                    <!-- <p>Pilier 2 : 🟢</p> -->
+                    <!-- <p>Pilier 3 : 🟡</p> -->
                 </li>
             </ul>
-        </details>-->
+        </details>
         <!--quêtes du jour-->
-        <!--<details>
+        <details class="quests-details">
             <summary>Quêtes du jour</summary>
-            Lorem ipsum ...
+            <ul class="quests-details-list">
+                <li class="conteneur_quetes">
+                    <!-- <summary>Quête 1</summary> -->
+                    <!-- <p>Pilier 1 : 🔴</p> -->
+                    <!-- <p>Pilier 2 : 🟢</p> -->
+                    <!-- <p>Pilier 3 : 🟡</p> -->
+                </li>
         </details>
     </div>
-    <hr>-->
-    <!--score total-->
-    <!--<div>
+    <hr>
+        <!--score total-->
+        <!--<div>
         <p>Votre Ethic'score : 0.00€</p>
     </div>-->
-    <!---->
+        <!---->
 </body>
 
 </html>
