total panier et ethicagnotte

--- a/popup.html
+++ b/popup.html
@@ -47,9 +47,9 @@
     </div>
     <hr>
         <!--score total-->
-        <!--<div>
-        <p>Votre Ethic'score : 0.00€</p>
-    </div>-->
+    <div class="conteneur_ecoscore">
+        <!--<p>Votre Ethic'score : 0.00€</p>-->
+    </div>
         <!---->
 </body>
 
